[gd_scene load_steps=6 format=3 uid="uid://xp04lpnowrog"]

[ext_resource type="Script" uid="uid://v6k7ux1uhfol" path="res://scenes/ui/hud.gd" id="1_0mwgc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t0u63"]
bg_color = Color(0, 0, 0, 1)
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4geh5"]
bg_color = Color(0.94579977, 0.9417809, 0.9419589, 1)
border_width_left = 1
border_width_top = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y2n3x"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qa1cr"]
bg_color = Color(0.84003437, 0.0008719367, 0.8898385, 1)
border_color = Color(0, 0, 0, 1)
corner_detail = 4

[node name="hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1118.0
offset_bottom = -788.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0mwgc")

[node name="DamageBar" type="ProgressBar" parent="."]
z_index = 5
layout_mode = 0
offset_left = 22.0
offset_top = 12.0
offset_right = 422.0
offset_bottom = 44.0
theme_override_styles/background = SubResource("StyleBoxFlat_t0u63")
theme_override_styles/fill = SubResource("StyleBoxFlat_4geh5")
value = 95.0
show_percentage = false

[node name="HealthBar" type="ProgressBar" parent="."]
z_index = 5
layout_mode = 0
offset_left = 22.0
offset_top = 12.0
offset_right = 422.0
offset_bottom = 44.0
theme_override_styles/background = SubResource("StyleBoxEmpty_y2n3x")
theme_override_styles/fill = SubResource("StyleBoxFlat_qa1cr")
value = 90.0
show_percentage = false

[node name="XpGainBar" type="ProgressBar" parent="."]
z_index = 5
layout_mode = 0
offset_left = 22.0
offset_top = 60.0
offset_right = 322.0
offset_bottom = 84.0
theme_override_styles/background = SubResource("StyleBoxFlat_t0u63")
theme_override_styles/fill = SubResource("StyleBoxFlat_4geh5")
value = 95.0
show_percentage = false

[node name="XpBar" type="ProgressBar" parent="."]
z_index = 5
layout_mode = 0
offset_left = 22.0
offset_top = 60.0
offset_right = 322.0
offset_bottom = 84.0
theme_override_styles/background = SubResource("StyleBoxEmpty_y2n3x")
theme_override_styles/fill = SubResource("StyleBoxFlat_qa1cr")
value = 90.0
show_percentage = false
